--- a/views/config_booking_contract.js.erb
+++ b/views/config_booking_contract.js.erb
@@ -4,14 +4,41 @@ require(['jquery', 'YSDForms'], function($, YSDForms) {
 
       YSDForms.improve();
 
-      // Embed translations
-      <% if @show_translations and @tmpl %>
       $.ajax({url: '/admin/cms/translate/template/'+ <%=@tmpl.id%>, dataType: 'text'}).done(function(html) {
           var dom = $('<html />').prop('innerHTML', html);
           $('#contract_container').html(dom.find('body #page_wrapper'));
           $('head').append(dom.find('script:not([src])'));
       });
+
+      // Setup the tabs
+      $('[data-toggle="tabs"] a, .js-tabs a').click(function(e){
+          e.preventDefault();
+          $(this).tab('show');
+      });
+
+      <% if @show_translations %>
+      $('[data-toggle="tabs"] a, .js-tabs a').on('shown.bs.tab', function (e) {
+          $('#contract_container').empty();
+          $('#contract_activities_container').empty();
+          switch (e.target.id) {
+              case 'renting_contract':
+                  $.ajax({url: '/admin/cms/translate/template/'+ <%=@tmpl.id%>, dataType: 'text'}).done(function(html) {
+                      var dom = $('<html />').prop('innerHTML', html);
+                      $('#contract_container').html(dom.find('body #page_wrapper'));
+                      $('head').append(dom.find('script:not([src])'));
+                  });
+                  break;
+              case 'activities_contract':
+                  $.ajax({url: '/admin/cms/translate/template/'+ <%=@tmpl_orders.id%>, dataType: 'text'}).done(function(html) {
+                      var dom = $('<html />').prop('innerHTML', html);
+                      $('#contract_activities_container').html(dom.find('body #page_wrapper'));
+                      $('head').append(dom.find('script:not([src])'));
+                  });
+                  break;
+          }
+      });
       <% end %>
+
 
   });
 });
