--- a/views/config_booking_contract.js.erb
+++ b/views/config_booking_contract.js.erb
@@ -4,11 +4,13 @@ require(['jquery', 'YSDForms'], function($, YSDForms) {
 
       YSDForms.improve();
 
+      <% if @show_translations and @tmpl %>
       $.ajax({url: '/admin/cms/translate/template/'+ <%=@tmpl.id%>, dataType: 'text'}).done(function(html) {
           var dom = $('<html />').prop('innerHTML', html);
           $('#contract_container').html(dom.find('body #page_wrapper'));
           $('head').append(dom.find('script:not([src])'));
       });
+      <% end %>
 
       // Setup the tabs
       $('[data-toggle="tabs"] a, .js-tabs a').click(function(e){
@@ -22,18 +24,22 @@ require(['jquery', 'YSDForms'], function($, YSDForms) {
           $('#contract_activities_container').empty();
           switch (e.target.id) {
               case 'renting_contract':
+                  <% if @tmpl %>
                   $.ajax({url: '/admin/cms/translate/template/'+ <%=@tmpl.id%>, dataType: 'text'}).done(function(html) {
                       var dom = $('<html />').prop('innerHTML', html);
                       $('#contract_container').html(dom.find('body #page_wrapper'));
                       $('head').append(dom.find('script:not([src])'));
                   });
+                  <% end %>
                   break;
               case 'activities_contract':
+                  <% if @tmpl_orders %>
                   $.ajax({url: '/admin/cms/translate/template/'+ <%=@tmpl_orders.id%>, dataType: 'text'}).done(function(html) {
                       var dom = $('<html />').prop('innerHTML', html);
                       $('#contract_activities_container').html(dom.find('body #page_wrapper'));
                       $('head').append(dom.find('script:not([src])'));
                   });
+                  <% end %>
                   break;
           }
       });
