--- a/views/booking_activities_schedule.erb
+++ b/views/booking_activities_schedule.erb
@@ -5,5 +5,21 @@
   <div id="calendar" class="top-margin smaller_text">
   </div>
 </div>
-<div id="dialog_container" class="smaller_text" style="background: white; min-width: 900px; min-height:450px; overflow-y: scroll; display:none">
+
+<!-- Modal dialog to show information -->
+<div id="occupation_dialog_container" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="pendingAssignationModalLabel">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <ul class="block-options">
+          <li>
+            <button data-dismiss="modal" type="button"><i class="si si-close"></i></button>
+          </li>
+        </ul>
+        <h3 class="modal-title"></h3>
+      </div>
+      <div class="modal-body">
+      </div>
+    </div>
+  </div>
 </div>
