--- a/views/booking_activity_occupation.erb
+++ b/views/booking_activity_occupation.erb
@@ -86,7 +86,20 @@
   <% end %>
 
 </div>
-<div id="occupation-detail" class="all-space" style="width: 950px; min-height: 450px; background: white; overflow-y: scroll; font-size: 1.2em; display: none">
-</div>
-<div id="dialog_container" class="all-space" style="width: 950px; min-height: 450px; background: white; display:none">
+
+<div id="occupation_dialog_container" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="pendingAssignationModalLabel">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <ul class="block-options">
+          <li>
+            <button data-dismiss="modal" type="button"><i class="si si-close"></i></button>
+          </li>
+        </ul>
+        <h3 class="modal-title"></h3>
+      </div>
+      <div class="modal-body">
+      </div>
+    </div>
+  </div>
 </div>
