--- a/views/_booking_management_other_tab.erb
+++ b/views/_booking_management_other_tab.erb
@@ -14,6 +14,26 @@
                </span>
               </div>
             </div>
+
+            <% if @step2_confirmation %>
+            <div class="element_template">
+              <div class="entity-field">
+                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.step2_confirmation %></span>
+                <span class="entity-fieldvalue">
+                  <%% if (entity.sales_channel_code == null || entity.sales_channel_code == '') { %>
+                  <a href="<%=booking_front_end_prefix%>/reserva/<%%=entity.free_access_id%>/step-2" target="_blank">
+                     <%=booking_front_end_prefix%>/reserva/<%%=entity.free_access_id%>/step-2</a>
+                  <%% } else { %>
+                  <% if @addon_sales_channels %>
+                     <a href="<%%=self.model.entityHooks[0].frontendPrefixes[entity.sales_channel_code]%>/reserva/<%%=entity.free_access_id%>/step-2" target="_blank">
+                       <%%=self.model.entityHooks[0].frontendPrefixes[entity.sales_channel_code]%>/reserva/<%%=entity.free_access_id%>/step-2</a>
+                     <% end %>
+                  <%% } %>
+               </span>
+              </div>
+            </div>
+            <% end %>
+
             <div class="element_template">
               <div class="entity-field">
                 <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.source %></span>
