--- a/views/booking_categories_management.erb
+++ b/views/booking_categories_management.erb
@@ -253,6 +253,12 @@
                             </div>
                       </div>
                       <div class="form-group">
+                        <label class="col-md-3 control-label" for="color">Color</label>
+                        <div class="col-md-9">
+                          <input type="color" name="color" <%% if (entity) {%> value="<%%=entity.color%>" <%% } %> style="width:50px" class="form-control"/>
+                        </div>
+                      </div>
+                      <div class="form-group">
                         <div class="col-md-9 col-md-offset-3">
                             <input type="button" class="btn btn-sm btn-primary update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
                         </div>
