--- a/views/bookings_planning.erb
+++ b/views/bookings_planning.erb
@@ -157,17 +157,17 @@
         <h3 class="modal-title">Reservas pendientes de asignar <span id="pending_reservations_count">(<%=@pending_of_asignation_bookings.size%>)</span></h3>
       </div>
       <div class="modal-body">
-        <div class="row">
+        <!--div class="row">
           <div class="col-xs-12 col-md-12 col-lg-12">
             <button id="pending-reservation-auto-assignation-btn" class="btn btn-minw btn-primary btn-assign-resource">Asignación automática de todas las reservas</button>
           </div>
-        </div>
+        </div-->
         <table class="table table-hover">
           <thead>
           <tr>
             <th style="width: 50px">#</th>
             <th style="width: 120px">Cliente</th>
-            <% if @product_family.driver and @product_family.code='car'%>
+            <% if @product_family and @product_family.fuel%>
             <th style="width: 100px">Nacimiento</th>
             <% end %>
             <th style="width: 100px">Fechas</th>
@@ -183,14 +183,14 @@
             <tr>
               <td style="vertical-align: middle"><%= reservation.id %></td>
               <td style="vertical-align: middle"><%= reservation.customer_name %> <%= reservation.customer_surname%></td>
-              <% if @product_family.driver and @product_family.code='car'%>
+              <% if @product_family and @product_family.fuel%>
                 <td style="vertical-align: middle"><%= reservation.driver_date_of_birth ? reservation.driver_date_of_birth.strftime('%d-%m-%Y') : '-'%><br>(<%=reservation.driver_date_of_birth ? BookingDataSystem::Booking.completed_years(reservation.date_from, reservation.driver_date_of_birth) : '-' %> años)</td>
               <%end%>
               <td style="vertical-align: middle"><%=reservation.date_from.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=reservation.time_from%><%end%><br><%=reservation.date_to.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=reservation.time_to%><%end%></td>
               <td style="vertical-align: middle"><%=reservation.days%></td>
               <td style="vertical-align: middle">
                  <% if reservation.booking_line_resources.size == 1 %>
-                   <div id="booking-line-resource-<%=reservation.booking_line_resources.first.id%>">
+                   <div id="booking-line-resource-<%=reservation.booking_line_resources.first.id%>" class="booking-line-resource">
                      <div class="col-lg-12">
                        <strong><%= reservation.booking_lines.first.item_id %></strong>&nbsp;&nbsp;
                        <button class="btn btn-minw btn-success btn-assign-resource"
@@ -213,21 +213,19 @@
                                data-booking-customer-weight="<%=reservation.booking_line_resources.first.customer_weight%>"
                                <% end %>
                                data-booking-line-resource-id="<%=reservation.booking_line_resources.first.id%>">Manual</button>
-                       <button class="btn btn-minw btn-primary btn-assign-resource" data-booking-line-resource-id="<%=reservation.booking_line_resources.first.id%>">Automática</button>
+                       <!--button class="btn btn-minw btn-primary btn-assign-resource" data-booking-line-resource-id="<%=reservation.booking_line_resources.first.id%>">Automática</button-->
                      </div>
+                     <% if @product_family.height or @product_family.weight %>
+                       <div class="col-lg-offset-1 col-lg-11">
+                         <span><strong>altura:</strong> <%= (reservation.booking_line_resources.first.customer_height and !reservation.booking_line_resources.first.customer_height.nil? and !reservation.booking_line_resources.first.customer_height.empty?) ? reservation.booking_line_resources.first.customer_height : ' N/A '%></span>
+                         <span><strong>peso:</strong> <%=(reservation.booking_line_resources.first.customer_weight and !reservation.booking_line_resources.first.customer_weight.nil? and !reservation.booking_line_resources.first.customer_weight.empty?) ? reservation.booking_line_resources.first.customer_weight : ' N/A '%></span>
+                       </div>
+                     <% end %>
                    </div>
-                   <% if @product_family.height or @product_family.weight %>
-                   <div style="margin-top: 3em">
-                     <div class="col-lg-offset-1 col-lg-11">
-                       <span><strong>altura:</strong> <%= (reservation.booking_line_resources.first.customer_height and !reservation.booking_line_resources.first.customer_height.nil? and !reservation.booking_line_resources.first.customer_height.empty?) ? reservation.booking_line_resources.first.customer_height : ' N/A '%></span>
-                       <span><strong>peso:</strong> <%=(reservation.booking_line_resources.first.customer_weight and !reservation.booking_line_resources.first.customer_weight.nil? and !reservation.booking_line_resources.first.customer_weight.empty?) ? reservation.booking_line_resources.first.customer_weight : ' N/A '%></span>
-                     </div>
-                   </div>
-                   <% end %>
                  <% else %>
                    <% reservation.booking_line_resources.each do |reservation_resource| %>
                      <% if reservation_resource.booking_item_reference.nil? %>
-                       <div style="margin-bottom: 3em">
+                       <div id="booking-line-resource-<%=reservation_resource.id%>" style="margin-bottom: 3em" class="booking-line-resource">
                          <div class="col-lg-12">
                            <strong><%= reservation_resource.booking_line.item_id %></strong>&nbsp;&nbsp;
                            <button class="btn btn-minw btn-success btn-assign-resource"
@@ -242,26 +240,24 @@
                                    data-booking-time-from="<%=reservation.time_from%>"
                                    data-booking-to="<%=reservation.date_to.strftime('%d-%m-%Y')%><%if @product_family.time_to_from%> <%=reservation.time_to%><%end%>"
                                    data-booking-date-to="<%=reservation.date_to.strftime('%Y-%m-%d')%>"
-                                   data-booking-time-to="<%=reservation.time_to%>"                                   data-booking-category="<%= reservation_resource.booking_line.item_id %>"
+                                   data-booking-time-to="<%=reservation.time_to%>"
+                                   data-booking-category="<%= reservation_resource.booking_line.item_id %>"
                                    data-booking-days="<%=reservation.days%>"
                                    <% if @product_family.height or @product_family.weight %>
                                    data-booking-customer-height="<%=reservation_resource.customer_height%>"
                                    data-booking-customer-weight="<%=reservation_resource.customer_weight%>"
                                    <% end %>
                                    data-booking-line-resource-id="<%=reservation_resource.id%>">Manual</button>
-                           <button class="btn btn-minw btn-primary btn-assign-resource"
-                                   data-booking-line-resource-id="<%=reservation_resource.id%>">Automática</button>
+                           <!--button class="btn btn-minw btn-primary btn-assign-resource"
+                                   data-booking-line-resource-id="<%=reservation_resource.id%>">Automática</button-->
                          </div>
+                         <% if @product_family.height or @product_family.weight %>
+                            <div class="col-lg-offset-1 col-lg-11" style="margin-bottom: 0.2em">
+                              <span><strong>altura:</strong> <%=(reservation_resource.customer_height and !reservation_resource.customer_height.nil? and !reservation_resource.customer_height.empty?) ? reservation_resource.customer_height : ' N/A '%></span>
+                              <span><strong>peso:</strong> <%=(reservation_resource.customer_weight and !reservation_resource.customer_weight.nil? and !reservation_resource.customer_weight.empty?) ? reservation_resource.customer_weight : ' N/A '%></span>
+                            </div>
+                         <% end %>
                        </div>
-                       <% if @product_family.height or @product_family.weight %>
-                       <div style="margin-bottom: 3.50em">
-                          <div class="col-lg-offset-1 col-lg-11" style="margin-bottom: 0.2em">
-                            <span><strong>altura:</strong> <%=(reservation_resource.customer_height and !reservation_resource.customer_height.nil? and !reservation_resource.customer_height.empty?) ? reservation_resource.customer_height : ' N/A '%></span>
-                            <span><strong>peso:</strong> <%=(reservation_resource.customer_weight and !reservation_resource.customer_weight.nil? and !reservation_resource.customer_weight.empty?) ? reservation_resource.customer_weight : ' N/A '%></span>
-                          </div>
-                       </div>
-                       <br>
-                       <% end %>
                      <% end %>
                    <% end %>
                  <% end %>
